# openflows

./: .dockerignore  .env.example  .gitignore  .snif.json  .typos.toml  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  Dockerfile  FIXES_SUMMARY.md  INSTALL.md  Makefile  PACKAGING.md  QUICK_START.md  README.md  ROADMAP.md  RUN.md  TESTING_QUICK_START.md  TOKEN_GUIDE.md  TUTORIAL.md  deny.toml  docker-compose.yml  litellm_config.yaml  update_registry.py
.cargo/: config.toml
.github/workflows/: ci.yml  create-release.yml  release.yml  snif-review.yml
binary/: Cargo.toml
binary/src/: bundled.rs  debug.rs  doctor.rs  lib.rs  main.rs  orchestration.rs
binary/src/nodes/: mod.rs
binary/tests/: nexus_e2e.rs  nexus_e2e_codex.rs  nexus_real_e2e.rs  nexus_real_e2e_codex.rs
crates/agent-client/: Cargo.toml
crates/agent-client/src/: anthropic.rs  fallback.rs  fireworks.rs  gemini.rs  lib.rs  mcp.rs  openai.rs  runner.rs  truncate.rs
crates/agent-forge/: Cargo.toml
crates/agent-forge/src/: lib.rs
crates/agent-forge/tests/: forge_claude_e2e.rs
crates/agent-lore/: Cargo.toml
crates/agent-lore/src/: lib.rs
crates/agent-nexus/: Cargo.toml
crates/agent-nexus/src/: lib.rs  react_loop.rs
crates/agent-sentinel/: Cargo.toml
crates/agent-sentinel/src/: lib.rs
crates/agent-vessel/: Cargo.toml
crates/agent-vessel/src/: ci_poller.rs  node.rs  types.rs
crates/agentflow-tui/: Cargo.toml
crates/agentflow-tui/src/: app.rs  lib.rs
crates/agentflow-tui/src/dashboard/: events.rs  mod.rs  workers.rs
crates/agentflow-tui/src/doctor/: mod.rs
crates/agentflow-tui/src/setup/: mod.rs  model_discovery.rs  step_agents.rs  step_api.rs  step_cli_backend.rs  step_coder.rs  step_domains.rs  step_done.rs  step_env.rs  step_existing.rs  step_github.rs  step_mode.rs  step_module.rs  step_notifications.rs  step_provider.rs  step_proxy.rs  step_repo.rs  step_security.rs  step_welcome.rs
crates/agentflow-tui/src/util/: env_check.rs  logo.rs  mod.rs  theme.rs
crates/agentflow-tui/src/widgets/: check.rs  confirm.rs  infobox.rs  input.rs  mod.rs  progress.rs  select.rs  table.rs
crates/anthropic-mock/: Cargo.toml
crates/anthropic-mock/src/: main.rs
crates/coder-client/: Cargo.toml  build.rs
crates/coder-client/src/: bootstrap.rs  chat_stream.rs  lib.rs  mock_chat_server.rs  types.rs
crates/coder-client/templates/: rebuild_templates.sh
crates/coder-client/templates/openflows-forge/: main.tf
crates/coder-client/templates/openflows-lore/: main.tf
crates/coder-client/templates/openflows-nexus/: main.tf
crates/coder-client/templates/openflows-sentinel/: main.tf
crates/coder-client/templates/openflows-vessel/: main.tf
crates/config/: Cargo.toml
crates/config/src/: lib.rs  project.rs  registry.rs  state.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs  rest.rs  schemas.rs
crates/nexus-chat/: Cargo.toml
crates/nexus-chat/src/: chat_loop.rs  discord_client.rs  discord_gateway.rs  lib.rs  message_types.rs  mock.rs  rate_limit.rs  slack_client.rs  whatsapp_client.rs
crates/nexus-gateway/: Cargo.toml
crates/nexus-gateway/src/: gateway.rs  interpreter.rs  knowledge.rs  lib.rs  messages.rs  notification_bridge.rs  plugin.rs  rate_limit.rs  react.rs
crates/nexus-gateway/src/channels/: discord.rs  mock.rs  mod.rs  slack.rs  whatsapp.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: lib.rs
crates/openflows-harness/: Cargo.toml
crates/openflows-harness/src/: main.rs  store.rs
crates/pair-harness/: Cargo.toml
crates/pair-harness/src/: coder_process.rs  lib.rs  mcp_config.rs  pair.rs  pair_state.rs  process.rs  provision.rs  responses_proxy.rs  transport.rs  types.rs  watchdog.rs  watcher.rs  workspace.rs  worktree.rs
crates/pair-harness/tests/: proxy_routing.rs
crates/pocketflow-core/: Cargo.toml
crates/pocketflow-core/src/: flow.rs  lib.rs  node.rs  pair_keys.rs  store.rs  types.rs
crates/provisioner/: Cargo.toml
crates/provisioner/src/: coder_process.rs  lib.rs  provision.rs  transport.rs  types.rs
docs/: AGENT_BOOTSTRAP.md  ORCHESTRATOR.md  TESTING_GUIDE.md  agent-system.md  agentflow-pair-harness.md  cli-backend-configuration.md  coder-compatibility.md  configuration.md  contribution_guidelines.md  demo.md  ephemeral-coder-workspace-integration.md  extending.md  getting-started.md  governance.md  license-asset-flow.md  nexus-issue-sync.md  phase8-e2e-validation.md  setup-claude-cli.md  shared-store.md  tenancy.md
docs/architecture/: agent-orchestration-protocol.md  openflows-coder-integration.md  system-behavior.md  vessel-agent.md
docs/articles/: openflows-and-coder-the-missing-piece-short.md  openflows-and-coder-the-missing-piece.md
orchestration/agent/: command-registry.json  registry.json
orchestration/agent/agents/: forge.agent.md  nexus.agent.md  sentinel.agent.md
orchestration/plugin/hooks/: hooks.json
orchestration/plugin/hooks/forge/: post_write_lint.sh  pre_bash_guard.sh  pre_compact_handoff.sh  pre_write_check.sh  session_start.sh  stop_require_artifact.sh  subagent_start.sh  subagent_stop.sh
orchestration/plugin/hooks/lore/: session-start.sh
orchestration/plugin/hooks/nexus/: init-session.sh  log-decision.sh
orchestration/plugin/hooks/sentinel/: post_write_validate.sh  pre_bash_readonly_guard.sh  session_start.sh  stop_require_eval.sh  subagent_start.sh  subagent_stop.sh
orchestration/plugin/hooks/vessel/: log-merge-status.sh  session-start.sh
orchestration/plugin/skills/: nexus-chat.md
orchestration/plugin/skills/forge-coding/: SKILL.md
orchestration/plugin/skills/forge-planning/: SKILL.md
orchestration/plugin/skills/sentinel-criteria/: SKILL.md
orchestration/plugin/skills/sentinel-review/: SKILL.md
orchestration/plugin/skills/shared-harness-protocol/: SKILL.md
packaging/homebrew/: openflows.rb
packaging/npm/: .env.example  .gitignore  README.md  package.json
packaging/npm/scripts/: install.js
scripts/: README.md  check_setup.sh  demo_recording_guide.md  dev-sync.sh  install.sh  prod.sh  reset-controller-state.sh  start_proxy.sh
tests/e2e/: smoketest.sh
