[workspace]
resolver = "2"
members = [
    "crates/pocketflow-core",
    "crates/agent-client",
    "crates/github",
    "crates/config",
    "crates/agent-nexus",
    "crates/agent-forge",
    "crates/agent-vessel",
    "crates/agent-lore",
    "crates/pair-harness",
    "binary",
    "crates/anthropic-mock",
    "crates/agentflow-tui",
]

[workspace.dependencies]
# async
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
futures     = "0.3"

# error handling
anyhow    = "1"
thiserror = "1"

# serde / json
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# redis
fred = { version = "10" }

# http
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI / env
dotenvy    = "0.15"

# yaml
serde_yaml = "0.9"

# regex
regex = "1"

# random
rand = "0.8"

# test utils
tempfile = "3"
