[package]
name    = "openflows"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "agentflow"
path = "src/bin/agentflow.rs"

[[bin]]
name = "agentflow-demo"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "agentflow-setup"
path = "src/bin/setup.rs"

[[bin]]
name = "agentflow-dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "agentflow-doctor"
path = "src/bin/doctor.rs"

[dependencies]
agentflow-tui = { path = "../crates/agentflow-tui" }
pocketflow-core = { path = "../crates/pocketflow-core" }
config          = { path = "../crates/config" }
agent-nexus     = { path = "../crates/agent-nexus" }
agent-forge     = { path = "../crates/agent-forge" }
agent-vessel    = { path = "../crates/agent-vessel" }
agent-lore      = { path = "../crates/agent-lore" }
agent-client    = { path = "../crates/agent-client" }
pair-harness    = { path = "../crates/pair-harness" }
nexus-gateway   = { path = "../crates/nexus-gateway" }

anyhow      = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy     = { workspace = true }

[dev-dependencies]
mockito = "1"
