[package]
name    = "openflows"
version = "1.1.6"
edition = "2021"
license = "MIT"

[[bin]]
name = "openflows"
path = "src/bin/agentflow.rs"

[[bin]]
name = "openflows-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "openflows-setup"
path = "src/bin/setup.rs"

[[bin]]
name = "openflows-dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "openflows-doctor"
path = "src/bin/doctor.rs"

[dependencies]
agentflow-tui = { path = "../crates/agentflow-tui" }
pocketflow-core = { path = "../crates/pocketflow-core" }
config          = { path = "../crates/config" }
agent-nexus     = { path = "../crates/agent-nexus" }
agent-forge     = { path = "../crates/agent-forge" }
agent-vessel    = { path = "../crates/agent-vessel" }
agent-lore      = { path = "../crates/agent-lore" }
pair-harness    = { path = "../crates/pair-harness" }

 anyhow      = { workspace = true }
 serde_json  = { workspace = true }
 tokio       = { workspace = true }
 tracing     = { workspace = true }
 tracing-subscriber = { workspace = true }
 dotenvy     = { workspace = true }
 which       = "7"

[dev-dependencies]
mockito = "1"
tempfile = "3"
