[package]
name    = "openflows"
version = "1.1.6"
edition = "2021"
license = "MIT"

[[bin]]
name = "openflows"
path = "src/bin/agentflow.rs"

[[bin]]
name = "openflows-doctor"
path = "src/bin/doctor.rs"

[dependencies]
pocketflow-core = { path = "../crates/pocketflow-core" }
config          = { path = "../crates/config" }
agent-nexus     = { path = "../crates/agent-nexus" }
agent-forge     = { path = "../crates/agent-forge" }
agent-vessel    = { path = "../crates/agent-vessel" }
agent-sentinel  = { path = "../crates/agent-sentinel" }
agent-lore      = { path = "../crates/agent-lore" }
provisioner    = { path = "../crates/provisioner" }
coder-client    = { path = "../crates/coder-client" }
clap            = { version = "4", features = ["derive"] }

  anyhow      = { workspace = true }
  serde_json  = { workspace = true }
  tokio       = { workspace = true }
  tracing     = { workspace = true }
  tracing-subscriber = { workspace = true }
  dotenvy     = { workspace = true }
  reqwest     = { workspace = true }

[dev-dependencies]
mockito = "1"
tempfile = "3"
