[package]
name        = "agent-forge"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
description = "Forge implementation agent for OpenFlows - executes code changes"
repository  = "https://github.com/The-AgenticFlow/OpenFlows"
keywords    = ["ai", "agent", "forge", "implementation", "coding"]
categories  = ["development-tools"]

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
config = { path = "../config" }
pair-harness = { path = "../pair-harness" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
