[package]
name = "agent-forge"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["serde", "tokio"]

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
config = { path = "../config" }
coder-client = { path = "../coder-client", features = ["chats-api"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
