[package]
name = "agent-nexus"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
agent-client = { path = "../agent-client" }
config = { path = "../config" }
github = { path = "../github" }
nexus-gateway = { path = "../nexus-gateway" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
