[package]
name = "agent-nexus"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
config = { path = "../config" }
github = { path = "../github" }
coder-client = { path = "../coder-client" }
openflows-notifier = { package = "notifier", path = "../notifier" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
