[package]
name        = "agent-sentinel"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
description = "Sentinel review agent for OpenFlows - reviews and validates code changes"
repository  = "https://github.com/The-AgenticFlow/OpenFlows"
keywords    = ["ai", "agent", "sentinel", "review", "validation"]
categories  = ["development-tools"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
pocketflow-core = { path = "../pocketflow-core" }
pair-harness = { path = "../pair-harness" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"