[package]
name    = "agent-sentinel"
version = "1.1.6"
edition = "2021"
license = "MIT"

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
config          = { path = "../config" }
coder-client    = { path = "../coder-client", features = ["chats-api"] }
  anyhow      = { workspace = true }
  async-trait = { workspace = true }
  serde       = { workspace = true }
  serde_json  = { workspace = true }
  tokio       = { workspace = true }
  tracing     = { workspace = true }
