[package]
name        = "agent-vessel"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
description = "Vessel merge agent for OpenFlows - handles PR merges and CI integration"
repository  = "https://github.com/The-AgenticFlow/OpenFlows"
keywords    = ["ai", "agent", "vessel", "merge", "ci"]
categories  = ["development-tools"]

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
config = { path = "../config" }
github = { path = "../github" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockito = "1"
