[package]
name = "agent-vessel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
config = { path = "../config" }
github = { path = "../github" }
pair-harness = { path = "../pair-harness", features = ["coder"] }
coder-client = { path = "../coder-client" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockito = "1"
