[package]
name        = "agentflow-tui"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
description = "Terminal UI for OpenFlows setup and configuration"
repository  = "https://github.com/The-AgenticFlow/OpenFlows"
keywords    = ["tui", "terminal", "setup", "wizard"]
categories  = ["command-line-interface", "command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.10"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
config = { path = "../config" }
pocketflow-core = { path = "../pocketflow-core" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
