[package]
name = "agentflow-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal UI for OpenFlows setup and monitoring"
repository = "https://github.com/The-AgenticFlow/OpenFlows"
keywords = ["tui", "terminal", "setup", "openflows"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.10"
anyhow = { workspace = true }
config = { path = "../config" }
serde_json = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
