[package]
name = "anthropic-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
