[package]
name = "nexus-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pocketflow-core = { path = "../pocketflow-core" }
config = { path = "../config" }
agent-client = { path = "../agent-client" }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
