[package]
name        = "pair-harness"
version     = "0.2.0"
edition     = "2021"
license     = "MIT"
description = "Event-driven harness for FORGE-SENTINEL pair lifecycle management"
repository  = "https://github.com/The-AgenticFlow/OpenFlows"
keywords    = ["ai", "agents", "forge", "sentinel", "orchestration"]
categories  = ["asynchronous", "development-tools"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
notify = "6.1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
which = "7"
regex = "1"
config = { path = "../config" }
reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
tempfile = "3"