[package]
name = "pair-harness"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Event-driven harness for FORGE-SENTINEL pair lifecycle management"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
notify = "6.1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
which = "7"
regex = "1"
config = { path = "../config" }
agent-client = { path = "../agent-client" }
reqwest = { workspace = true, features = ["blocking", "stream"] }
axum = { version = "0.8", features = ["http2"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"