[package]
name = "provisioner"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Coder workspace provisioning: transport + skill/MCP/standards materialization"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
config = { path = "../config" }
coder-client = { path = "../coder-client" }
